fixed alignment issues in left buttons

--- a/static/style.css
+++ b/static/style.css
@@ -59,7 +59,7 @@ button {
     margin: 0;
     text-decoration: underline;
     font-size: 3.5rem;
-
+    font-family: "Segoe UI Symbol", "Noto Sans Symbols", sans-serif;
     transition: scale .2s;
 }
 a:hover, button:hover {
